fix scrollbar

--- a/src/styles/TicketPage.css
+++ b/src/styles/TicketPage.css
@@ -10,7 +10,7 @@
 }
 
 .ticketStubContainer {
-  padding: 2rem;
+  padding: 2rem 5%;
   width: 90%;
 }
 
